kubernetes/apps/oxicloud-system/oxicloud/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: oxicloud-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: oxicloud
    egress:
      - toEndpoints:
          - {}
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: pocket-id
              io.kubernetes.pod.namespace: security
        toPorts:
          - ports:
              - port: "80"
          - ports:
              - port: "8080"
